<resources>
    <string name="app_name">Media Player</string>
    <string name="img_app_description">Media Player</string>
    <string name="img_btn_previous_description">Previous</string>
    <string name="img_btn_rewind_description">Rewind</string>
    <string name="img_btn_play_description">Play</string>
    <string name="img_btn_forward_description">Forward</string>
    <string name="img_btn_next_description">Next</string>
    <string name="img_btn_playlist_description">Playlist</string>
    <string name="default_start_time">00:00</string>
    <string name="default_final_time">--:--</string>
    <string name="notification_id">101</string>
    <string name="channel_id">MP001</string>
    <string name="channel_name">Music Player</string>
    <string name="channel_description">Music Player Channel</string>
</resources>