<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MusicPlayerActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnPlaylist"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_alignEnd="@id/layoutHeader"
        android:layout_marginTop="15sp"
        android:background="@drawable/btn_playlist"
        android:clickable="true"
        android:contentDescription="@string/img_btn_playlist_description"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imgApp"
        android:layout_width="220sp"
        android:layout_height="220sp"
        android:layout_below="@id/layoutHeader"
        android:layout_centerInParent="true"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/img_app_description"
        android:src="@mipmap/music_player"
        app:srcCompat="@mipmap/music_player" />

    <SeekBar
        android:id="@+id/songProgressBar"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp" />

    <TextView
        android:id="@+id/txtStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/songProgressBar"
        android:layout_alignTop="@id/songProgressBar"
        android:layout_marginStart="10sp"
        android:layout_marginTop="-25sp"
        android:text="@string/default_start_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtFinalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/songProgressBar"
        android:layout_alignEnd="@id/songProgressBar"
        android:layout_marginTop="-25sp"
        android:layout_marginEnd="17sp"
        android:text="@string/default_final_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtSongName"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_below="@id/imgApp"
        android:layout_alignBottom="@id/songProgressBar"
        android:layout_centerInParent="true"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="50sp"
        android:width="330sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/layoutPlayerButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/songProgressBar"
        android:background="@android:color/transparent"
        android:padding="25sp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnPrevious"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_gravity="center"
            android:background="@drawable/btn_previous"
            android:clickable="true"
            android:contentDescription="@string/img_btn_previous_description"
            android:focusable="true" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnRewind"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_gravity="center"
            android:background="@drawable/btn_rewind"
            android:clickable="true"
            android:contentDescription="@string/img_btn_rewind_description"
            android:focusable="true" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/img_btn_play_description"
            android:focusable="true" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnForward"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_gravity="center"
            android:background="@drawable/btn_forward"
            android:clickable="true"
            android:contentDescription="@string/img_btn_forward_description"
            android:focusable="true" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="55sp"
            android:layout_height="55sp"
            android:layout_gravity="center"
            android:background="@drawable/btn_next"
            android:clickable="true"
            android:contentDescription="@string/img_btn_next_description"
            android:focusable="true" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>